plugin/src/test/resources/annotator/perl/unreachableCode/exitFromInnerFunc.code
sub somesub{
    'before';
    func Exit {
        'inner before';
        exit;
        '<error descr="Unreachable code">inner after</error>';
    }
    'after';
    func preload {
        'inner before';
        exit;
    }
    'after';
}
